<resources>
    <string name="app_name">OsolApp</string>
    <string name="button1">Connexion Osol</string>
    <string name="Entreprise">O"'"Sol</string>
    <string name="mail">pico@osol.com</string>
    <string name="button2">Connexion Utilisateur</string>
    <string name="button3">Créer un compte</string>
    <string name="button4">Recherche ID et Password</string>
    <string name="tag">Bonjour est bienvenue dans le monde merveilleux de Osol</string>
    <string name="title">OSOL \n PICO</string>
    <string name="Soutiens"> Si vous cliquez sur le bouton en dessous, vous allez vous retrouver sur
    une page qui affiche tout les succès de O"'"Sol</string>
    <string name="Back">    J"'"espère que cette partie vous a interéssée. Vous pouvez retourner en arrière
    grâce au boutton ci-dessous. Avec la barre de naviguation n"'"hésitez pas a vous
    connecter si vous avez un Pico. Sinon go l"'"acheter</string>
    <string name="User">Nom d"'"Utilisateur</string>
    <string name="description">     Bienvenue dans l"'"histoire de la start-up OSol.
    C"'"est une start-up d"'"une dizaine d"'"année crée par 3 jeunes étudiants.
    Elle se situe dans le sud de la France, à Cannes dans la région PACA</string>
    <string name="descriptionK">    Bienvenue dans l"'"histoire de la start-up OSol.
    Voici sur cette page quelque info sur KINO</string>
    <string name="descriptionP">    Bienvenue dans l"'"histoire de la start-up OSol.
    Voici sur cette page quelque info sur PICO </string>
    <string name="blablaKino">      Kino est la première création de l"'"entreprise OSol.
    Kino ressemble à une Fleur. Vous pouvez avoir plus de détail en cliquant sur le boutton
    ci-dessous : </string>
    <string name="blablaPico1">     Kino est la seconde création de l"'"entreprise OSol.
    Pico a été présenté au CES de Las Vegas 2020 et va être présent au Salon de Vivatech 2020.
    Pico est en forme de boitier, c"'"est une batterie mobile. Elle est plus facilement
    transportable que Kino</string>
    <string name="blablaKino1">     Kino est la première création de l"'"entreprise OSol.
    Kino a été présenté au CES de Las Vegas et aussi au Salon de Vivatech.
    Les pétales de la fleur sont en photovoltaiques ce qui permet d"'"avoir une énergie illimitée.</string>
    <string name="blablaPico2">     Sur cette seconde image nous voyons l"'"intérieur de la  batterie.
    Dans cette batterie, il y a 6 piles pour avoir une batterie transportable</string>
    <string name="blablaPico">      Pico est la deuxième création de l"'"entreprise OSol.
    Pico est une batterie transportable. Vous pouvez avoir plus de détail en cliquant sur le boutton
    ci-dessous : </string>
    <string name="password">Mot de Passe</string>
    <string name="searchN">Recherche par nom</string>
    <string name="searchU">Recherche User</string>
    <string name="searchE">Recherche Email</string>
    <string name="search">Mot a chercher</string>
    <string name="button_val">Validation</string>
    <string name="Question">Etes vous Osolien ?</string>
    <string-array name="Choice">
        <item>Non</item>
        <item>Oui</item>
    </string-array>
    <string name="Version">Version 2.0</string>
    <string name="Temp">Température : </string>
    <string name="Bat">Info Batterie : </string>
    <string name="title_activity_creation_compte">creation_compte</string>
    <string name="question">êtes-vous O\'Solien ?</string>
    <string name="Title">Connection User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recherche">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
