<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textblanc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="45sp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:text="Connection User"
        android:layout_gravity="center_vertical"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textblanc2"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:text=""
        android:textSize="45sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        tools:context="fr.esilv.layoutsexample.RelativeLayoutActivity">

        <EditText
            android:id="@+id/user_user"
            android:layout_width="258dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:hint="@string/User"
            android:background="@drawable/border"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="476dp" />


        <EditText
            android:id="@+id/password_user"
            android:layout_width="258dp"
            android:layout_height="34dp"
            android:layout_below="@id/user_user"
            android:layout_alignLeft="@id/user_user"
            android:layout_alignRight="@id/user_user"
            android:layout_centerInParent="true"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="536dp" />

        <Button
            android:id="@+id/button_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_user"
            android:layout_centerInParent="true"
            android:layout_marginTop="18dp"
            android:text="@string/button_val" />

        <TextView
            android:id="@+id/Version"
            android:layout_width="62dp"
            android:layout_height="14dp"
            android:layout_below="@id/button_user"
            android:layout_alignParentEnd="true"
            android:text="@string/Version"
            android:textSize="12sp" />

    </RelativeLayout>


</LinearLayout>