<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".connection_osol">

    <EditText
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:hint="@string/User"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="592dp" />


    <EditText
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:hint="@string/password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="640dp" />


    <Button
        android:id="@+id/buttonval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_val"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/titre2"
        android:layout_width="253dp"
        android:layout_height="141dp"
        android:text="Connection OSol"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/Version1"
        android:layout_width="62dp"
        android:layout_height="14dp"
        android:text="Version 1.0"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />



    <EditText
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:hint="@string/User"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="592dp" />


    <EditText
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:hint="@string/password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="640dp" />


    <Button
        android:id="@+id/button_osol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_val"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="253dp"
        android:layout_height="141dp"
        android:text="Connection OSol"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/Version"
        android:layout_width="62dp"
        android:layout_height="14dp"
        android:text="Version 1.0"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />




</androidx.constraintlayout.widget.ConstraintLayout>